--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 19:56:24 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -480,7 +479,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a0637" href="work/software-engineering.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a063d" href="work/software-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Software Engineering</h3>
@@ -493,7 +492,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="10fa1d7b-7526-1d5e-bcac-9aa3955cd64b" href="work/development-operations.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="7ff0dd77-b44b-56b3-eba3-4829d3bf908c" href="work/development-operations.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Developmment Operations</h3>
@@ -506,7 +505,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="388a6fef-e8c8-c66e-eb35-064765cd7f25" href="work/scripting.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="e33f4dd5-18e5-bba3-b938-793283def615" href="work/scripting.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Scripting</h3>
@@ -519,7 +518,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="ea96b599-a98a-9a51-528f-5bf8d18f8437" href="work/data-science-engineering.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 41vw, (max-width: 1439px) 28vw, 394.6171875px" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="c0f63314-3364-561b-f6ca-281a9269e13f" href="work/data-science-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Data Engineering and Science</h3>
@@ -576,197 +575,197 @@ height: 0.625rem;
             </div>
           </div>
         </div>
+        <div class="div-block-142">
+          <h2 class="heading-2">Skills</h2>
+          <div class="div-block-134">
+            <div id="w-node-_64811408-1f58-0813-6ae9-129255d35141-3fff4113" class="div-block-138"><img src="images/image-2.webp" loading="lazy" alt="" class="image-8">
+              <div class="div-block-135">
+                <a href="#" class="link underline-fill w-inline-block">
+                  <div class="text-block-15">Cloud Computing</div>
+                  <div class="custom-styles w-embed">
+                    <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                  </div>
+                </a>
+                <div class="paragraph-light cc-position-name">Google GCP, AWS</div>
+              </div>
+            </div>
+            <div id="w-node-_64811408-1f58-0813-6ae9-129255d3514a-3fff4113" class="div-block-141"><img src="images/image-3.webp" loading="lazy" alt="" class="image-7">
+              <div class="div-block-135">
+                <a href="#" class="link underline-fill w-inline-block">
+                  <div class="text-block-15">Websites</div>
+                  <div class="custom-styles w-embed">
+                    <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                  </div>
+                </a>
+                <div class="paragraph-light cc-position-name">Modern, Responsive</div>
+              </div>
+            </div>
+            <div id="w-node-_64811408-1f58-0813-6ae9-129255d35153-3fff4113" class="div-block-139"><img src="images/image.webp" loading="lazy" alt="" class="image-9">
+              <div class="div-block-135">
+                <a href="#" class="link underline-fill w-inline-block">
+                  <div class="text-block-15">API Integrations</div>
+                  <div class="custom-styles w-embed">
+                    <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                  </div>
+                </a>
+                <div class="paragraph-light cc-position-name">Machine Learning, OpenAI</div>
+              </div>
+            </div>
+            <div id="w-node-_64811408-1f58-0813-6ae9-129255d3515c-3fff4113" class="div-block-140"><img src="images/image-4.webp" loading="lazy" alt="" class="image-10">
+              <div class="div-block-135">
+                <a href="#" class="link underline-fill w-inline-block">
+                  <div class="text-block-15">UX Research</div>
+                  <div class="custom-styles w-embed">
+                    <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                  </div>
+                </a>
+                <div class="paragraph-light cc-position-name"><strong>Market, User</strong></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </section>
-    <div class="div-block-142">
-      <h2 class="heading-2">Skills</h2>
-      <div class="div-block-134">
-        <div id="w-node-_3ed4391a-a6b1-9032-3896-436806f77644-3fff4113" class="div-block-138"><img src="images/image-2.webp" loading="lazy" alt="" class="image-8">
-          <div class="div-block-135">
-            <a href="#" class="link underline-fill w-inline-block">
-              <div class="text-block-15">Cloud Computing</div>
-              <div class="custom-styles w-embed">
-                <style>
-.underline-fill::before {
-  height: 100%;
-  top: 0;
-  opacity: 0;
-}
-.underline-fill:hover::before {
-  opacity: 1;
-  animation: coverUp 0.3s ease forwards;
-}
-@keyframes coverUp {
-  0% {
-      transform-origin: 50% 100%;
-      transform: scale3d(1, 0.045, 1);
-  }
-  50% {
-      transform-origin: 50% 100%;
-      transform: scale3d(1, 1, 1);
-  }
-  51% {
-      transform-origin: 50% 0%;
-      transform: scale3d(1, 1, 1);
-  }
-  100% {
-      transform-origin: 50% 0%;
-      transform: scale3d(1, 0.045, 1);
-  }
-}
-.underline-fill::after {
-  content: '';
-  transition: opacity 0.3s;
-}
-.underline-fill:hover::after {
-  opacity: 0;
-}
-</style>
-              </div>
-            </a>
-            <div class="paragraph-light cc-position-name">Google GCP, AWS</div>
-          </div>
-        </div>
-        <div id="w-node-_267482de-6486-dccb-9d5e-7c47287b4a2a-3fff4113" class="div-block-141"><img src="images/image-3.webp" loading="lazy" alt="" class="image-7">
-          <div class="div-block-135">
-            <a href="#" class="link underline-fill w-inline-block">
-              <div class="text-block-15">Websites</div>
-              <div class="custom-styles w-embed">
-                <style>
-.underline-fill::before {
-  height: 100%;
-  top: 0;
-  opacity: 0;
-}
-.underline-fill:hover::before {
-  opacity: 1;
-  animation: coverUp 0.3s ease forwards;
-}
-@keyframes coverUp {
-  0% {
-      transform-origin: 50% 100%;
-      transform: scale3d(1, 0.045, 1);
-  }
-  50% {
-      transform-origin: 50% 100%;
-      transform: scale3d(1, 1, 1);
-  }
-  51% {
-      transform-origin: 50% 0%;
-      transform: scale3d(1, 1, 1);
-  }
-  100% {
-      transform-origin: 50% 0%;
-      transform: scale3d(1, 0.045, 1);
-  }
-}
-.underline-fill::after {
-  content: '';
-  transition: opacity 0.3s;
-}
-.underline-fill:hover::after {
-  opacity: 0;
-}
-</style>
-              </div>
-            </a>
-            <div class="paragraph-light cc-position-name">Modern, Responsive</div>
-          </div>
-        </div>
-        <div id="w-node-_130042ac-8736-ce86-65f5-14f38e73fe88-3fff4113" class="div-block-139"><img src="images/image.webp" loading="lazy" alt="" class="image-9">
-          <div class="div-block-135">
-            <a href="#" class="link underline-fill w-inline-block">
-              <div class="text-block-15">API Integrations</div>
-              <div class="custom-styles w-embed">
-                <style>
-.underline-fill::before {
-  height: 100%;
-  top: 0;
-  opacity: 0;
-}
-.underline-fill:hover::before {
-  opacity: 1;
-  animation: coverUp 0.3s ease forwards;
-}
-@keyframes coverUp {
-  0% {
-      transform-origin: 50% 100%;
-      transform: scale3d(1, 0.045, 1);
-  }
-  50% {
-      transform-origin: 50% 100%;
-      transform: scale3d(1, 1, 1);
-  }
-  51% {
-      transform-origin: 50% 0%;
-      transform: scale3d(1, 1, 1);
-  }
-  100% {
-      transform-origin: 50% 0%;
-      transform: scale3d(1, 0.045, 1);
-  }
-}
-.underline-fill::after {
-  content: '';
-  transition: opacity 0.3s;
-}
-.underline-fill:hover::after {
-  opacity: 0;
-}
-</style>
-              </div>
-            </a>
-            <div class="paragraph-light cc-position-name">Machine Learning, OpenAI</div>
-          </div>
-        </div>
-        <div id="w-node-bdc965fb-f38a-ac12-117d-98ffaa58dbb0-3fff4113" class="div-block-140"><img src="images/image-4.webp" loading="lazy" alt="" class="image-10">
-          <div class="div-block-135">
-            <a href="#" class="link underline-fill w-inline-block">
-              <div class="text-block-15">UX Research</div>
-              <div class="custom-styles w-embed">
-                <style>
-.underline-fill::before {
-  height: 100%;
-  top: 0;
-  opacity: 0;
-}
-.underline-fill:hover::before {
-  opacity: 1;
-  animation: coverUp 0.3s ease forwards;
-}
-@keyframes coverUp {
-  0% {
-      transform-origin: 50% 100%;
-      transform: scale3d(1, 0.045, 1);
-  }
-  50% {
-      transform-origin: 50% 100%;
-      transform: scale3d(1, 1, 1);
-  }
-  51% {
-      transform-origin: 50% 0%;
-      transform: scale3d(1, 1, 1);
-  }
-  100% {
-      transform-origin: 50% 0%;
-      transform: scale3d(1, 0.045, 1);
-  }
-}
-.underline-fill::after {
-  content: '';
-  transition: opacity 0.3s;
-}
-.underline-fill:hover::after {
-  opacity: 0;
-}
-</style>
-              </div>
-            </a>
-            <div class="paragraph-light cc-position-name"><strong>Market, User</strong></div>
-          </div>
-        </div>
-      </div>
-    </div>
     <section id="about" class="section-3">
       <div data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fc2" style="opacity:0" class="container">
         <div class="div-block-17">
