--- a/work/others.html
+++ b/work/others.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 19:56:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Mar 01 2024 20:32:17 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65e225bec6efdbdc6ba78f56" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -263,7 +263,7 @@
                 <div class="uui-team10_image-wrapper-2"><img srcset="../images/4c891f05141d567cf459edd158691dc4-p-500.jpg 500w, ../images/4c891f05141d567cf459edd158691dc4-p-800.jpg 800w, ../images/4c891f05141d567cf459edd158691dc4-p-1080.jpg 1080w, ../images/4c891f05141d567cf459edd158691dc4.jpg 1600w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" src="../images/4c891f05141d567cf459edd158691dc4.jpg" alt="" class="uui-team10_image-2"></div>
                 <div class="div-block-126">
                   <div class="uui-heading-tiny-9">
-                    <a data-w-id="75082d6e-de07-78b0-8dc0-49b6bf07a4f8" href="../work/project-2.html" class="uui-blogsection12_title-link w-inline-block">
+                    <a data-w-id="75082d6e-de07-78b0-8dc0-49b6bf07a4f8" href="#" class="uui-blogsection12_title-link w-inline-block">
                       <h3 class="uui-heading-xsmall-12">Mobile App Mock-Up</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -277,7 +277,7 @@
                 <div class="uui-team10_image-wrapper-2"><img src="../images/0d05c3dff116c04984a3013be1cf0846-ezgif.com-optimize.gif" loading="lazy" alt="" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
-                    <a data-w-id="122078bb-e4cb-ad5c-3f2c-6897a457b5de" href="../work/project-2.html" class="uui-blogsection12_title-link w-inline-block">
+                    <a data-w-id="122078bb-e4cb-ad5c-3f2c-6897a457b5de" href="#" class="uui-blogsection12_title-link w-inline-block">
                       <h3 class="uui-heading-xsmall-12">UX Researvh</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
