--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 21:21:10 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -26,7 +25,7 @@
     <div class="navigation-items">
       <div class="div-block-136">
         <a href="index.html" aria-current="page" class="link split-underline w-inline-block w--current">
-          <div class="text-block-14">Ayo | EYE-YOUR </div>
+          <div class="text-block-14"><span class="text-span-13">Ayo</span> | EYE-YOUR </div>
           <div class="custom-styles w-embed">
             <style>
 .split-underline::before {
@@ -333,6 +332,38 @@
               </div>
             </a>
             <div class="text-block-13">based in Dallas, TX</div>
+            <a href="#" class="link wavy-link w-inline-block">
+              <div class="line-graphic w-embed"><svg class="link__graphic link__graphic--slide" width="300%" height="100%" viewbox="0 0 1200 60" preserveaspectratio="none">
+                  <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
+                </svg></div>
+              <div class="custom-styles w-embed">
+                <style>
+.wavy-link {
+  font-family: lust-fine, sans-serif;
+  overflow: hidden;
+  padding: 7px 0;
+}
+.link__graphic {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  fill: none;
+  stroke: #000;
+  stroke-width: 1px;
+}
+.link__graphic--slide {
+  top: -3px;
+  stroke-width: 2px;
+  transition: transform 0.7s;
+  transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+}
+.link:hover .link__graphic--slide {
+  transform: translate3d(-66.6%, 0, 0);
+}
+</style>
+              </div>
+            </a>
           </div>
         </div>
       </div>
@@ -1332,7 +1363,7 @@ height: 0.625rem;
         <div id="w-node-c0bbbc4a-30e8-8350-f7ff-2700cc43f75e-3fff4113" class="button-card-wrapper">
           <div class="button-number">12</div>
           <a href="#" class="link wavy-link w-inline-block">
-            <div>Discover more</div>
+            <div class="text-block-19">Discover more</div>
             <div class="line-graphic w-embed"><svg class="link__graphic link__graphic--slide" width="300%" height="100%" viewbox="0 0 1200 60" preserveaspectratio="none">
                 <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
               </svg></div>
