--- a/work/development-operations.html
+++ b/work/development-operations.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Fri Mar 01 2024 21:21:10 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Mar 02 2024 00:43:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65e1550cc0fa8fef69ad2d8a" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
     <div class="navigation-items">
       <div class="div-block-136">
         <a href="../index.html" class="link split-underline w-inline-block">
-          <div class="text-block-14">Ayo | EYE-YOUR </div>
+          <div class="text-block-14"><span class="text-span-13">Ayo</span> | EYE-YOUR </div>
           <div class="custom-styles w-embed">
             <style>
 .split-underline::before {
