--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
+<!--  Last Published: Sat Mar 02 2024 17:57:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
-  <title>Ayo's Portfolio</title>
-  <meta content="Ayo's Portfolio" property="og:title">
+  <title>Portfolio - Webflow HTML website template</title>
+  <meta content="Portfolio - Webflow HTML website template" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="twitter:image">
@@ -128,7 +129,7 @@
 </style>
             </div>
           </a>
-          <a href="#about" class="link text-decoration-none w-inline-block">
+          <a href="#" class="link text-decoration-none w-inline-block">
             <div class="three-dots">ABOUT</div>
             <div class="custom-styles w-embed">
               <style>
@@ -241,7 +242,7 @@
           </a>
           <a href="index.html" aria-current="page" class="navigation-item w-nav-link w--current">Home</a>
           <a href="#" class="navigation-item w-nav-link">work</a>
-          <a href="#about" class="navigation-item w-nav-link">About</a>
+          <a href="#" class="navigation-item w-nav-link">About</a>
           <a href="#contact_me" class="navigation-item w-nav-link">Contact me</a>
           <a href="resume.html" class="navigation-item w-nav-link">Resume</a>
         </nav>
@@ -254,33 +255,25 @@
       <div class="container">
         <div class="intro-wrap">
           <div data-w-id="01b37a42-5ea5-e887-35c3-e3973cc99747" style="opacity:0" class="name_tittle">
-            <a href="#" class="link curved-underline w-inline-block">
-              <div class="text-block-17">Ayo Akinnawo</div>
-              <div class="line-graphic w-embed"><svg class="link__graphic link__graphic--stroke link__graphic--arc" width="100%" height="18" viewbox="0 0 59 18">
-                  <path d="M.945.149C12.3 16.142 43.573 22.572 58.785 10.842" pathlength="1"></path>
-                </svg></div>
+            <a href="resume.html" class="link split-underline w-inline-block">
+              <div class="text-block-20-copy">Ayo Akinnawo</div>
               <div class="custom-styles w-embed">
                 <style>
-.curved-underline::before {
-	content: none;
+.split-underline::before {
+  transform-origin: 50% 100%;
+  transition: clip-path 0.3s, transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
+  clip-path: polygon(0% 0%, 0% 100%, 0 100%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%, 100% 100%, 100% 0%);
 }
-.link__graphic--arc {
-	top: 73%;
-	left: -23%;
+.split-underline:hover::before {
+  transform: translate3d(0, 2px, 0) scale3d(1.08, 3, 1);
+  clip-path: polygon(0% 0%, 0% 100%, 50% 100%, 50% 0, 50% 0, 50% 100%, 50% 100%, 0 100%, 100% 100%, 100% 0%);
 }
-.link__graphic--arc path {
-    transition: stroke-dashoffset 0.4s cubic-bezier(0.7, 0, 0.3, 1);
+.split-underline div {
+  display: inline-block;
+  transition: transform 0.3s cubic-bezier(0.2, 1, 0.8, 1);
 }
-.link:hover .link__graphic--arc path {
-    transition-timing-function: cubic-bezier(0.8, 1, 0.7, 1);
-    transition-duration: 0.3s;
-}
-.link__graphic--stroke path {
-    stroke-dasharray: 1;
-    stroke-dashoffset: 1;
-}
-.link:hover .link__graphic--stroke path {
-    stroke-dashoffset: 0;
+.split-underline:hover div {
+  transform: translate3d(0, -2px, 0);
 }
 </style>
               </div>
@@ -291,7 +284,7 @@
             <h1 data-w-id="34f3d0d4-0947-ab41-71bc-490db9f35e98" style="-webkit-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 70px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="heading-jumbo"><span data-w-id="6dcefe20-f2c4-2ae6-472d-60d2b913c9b8" style="opacity:0" class="text-span">Full Stack  </span><span class="se_header">Software Engineer</span><span class="text-span"><br>‍</span>based in <span class="loc_header">Dallas, TX.</span> </h1>
             <div class="text-block-11">Full Stack</div>
             <a href="#" class="link underline-fill w-inline-block">
-              <div class="text-block-12">Software Engineer </div>
+              <div class="text-block-12-copy">Software Engineer </div>
               <div class="custom-styles w-embed">
                 <style>
 .underline-fill::before {
@@ -368,7 +361,7 @@
         </div>
       </div>
     </div>
-    <div id="w-node-de629e14-39ff-cb9d-9c5a-09661a075203-3fff4113" class="div-block-127"><img src="images/796aa837a81f3cf2b7eb363150d4d62c.gif" loading="lazy" style="opacity:0" data-w-id="933c31ba-b3ea-30f4-2e76-2b47214af284" alt=""></div>
+    <div id="w-node-de629e14-39ff-cb9d-9c5a-09661a075203-3fff4113" class="div-block-127"><img src="images/796aa837a81f3cf2b7eb363150d4d62c.gif" loading="lazy" style="opacity:0" data-w-id="933c31ba-b3ea-30f4-2e76-2b47214af284" alt="" class="image-11"></div>
   </div>
   <div class="scroll_dwn">
     <a href="#work" class="link-block-7 w-inline-block">
@@ -659,7 +652,7 @@ height: 0.625rem;
             <div id="w-node-_64811408-1f58-0813-6ae9-129255d3514a-3fff4113" class="div-block-141"><img src="images/image-3.webp" loading="lazy" alt="" class="image-7">
               <div class="div-block-135">
                 <a href="#" class="link underline-fill w-inline-block">
-                  <div class="text-block-15">Websites</div>
+                  <div class="text-block-15">Web Dev.</div>
                   <div class="custom-styles w-embed">
                     <style>
 .underline-fill::before {
@@ -795,69 +788,69 @@ height: 0.625rem;
               </div>
             </div>
           </div>
+          <section id="about" class="section-3">
+            <div data-w-id="bcff1c6f-e7d9-e4bd-c486-ed050eaa7753" style="opacity:0" class="container">
+              <div class="div-block-17">
+                <div class="carrer-headline-wrap">
+                  <h2 class="heading-2">Professional Experience</h2>
+                  <p class="paragraph-light">Experienced data scientist with a strong foundation in leveraging different tech stack in developing robust application. </p>
+                </div>
+                <a href="resume.html" class="div-block-16 w-inline-block">
+                  <div>View Resume </div>
+                  <div class="html-embed-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-up-right-circle" viewbox="0 0 16 16">
+                      <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.854 10.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"></path>
+                    </svg></div>
+                </a>
+              </div>
+              <div class="w-layout-grid work-experience-grid">
+                <div id="w-node-bcff1c6f-e7d9-e4bd-c486-ed050eaa775f-3fff4113" class="work-eduposition-wrap">
+                  <div class="div-block-132"><img src="images/Vector-Zercom-Logo.png" loading="lazy" width="125" id="w-node-bcff1c6f-e7d9-e4bd-c486-ed050eaa7761-3fff4113" alt="WrkLogo"></div>
+                  <div class="paragraph-light cc-position-name">Software Developement Engineer</div>
+                  <div class="paragraph-tiny cc-paragraph-tiny-light">Oct 2016— Nov 2018<br></div>
+                </div>
+                <div id="w-node-bcff1c6f-e7d9-e4bd-c486-ed050eaa7767-3fff4113" class="work-eduposition-wrap">
+                  <div class="div-block-130"><img src="images/Lidya_logo.png" loading="lazy" width="95" sizes="(max-width: 479px) 100vw, (max-width: 1279px) 95px, (max-width: 1439px) 7vw, 95px" alt="WrkLogo" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w"></div>
+                  <div class="paragraph-light cc-position-name">Data Analytical Engineer</div>
+                  <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2018 — Apr 2019<br></div>
+                </div>
+                <div id="w-node-bcff1c6f-e7d9-e4bd-c486-ed050eaa776f-3fff4113" class="work-eduposition-wrap">
+                  <div class="div-block-131"><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="135" alt="SchlIcon"></div>
+                  <div class="paragraph-light cc-position-name">Graduate Student Assistant </div>
+                  <div class="paragraph-tiny cc-paragraph-tiny-light">May 2019— Nov 2019<br></div>
+                </div>
+                <div id="w-node-bcff1c6f-e7d9-e4bd-c486-ed050eaa7777-3fff4113" class="work-eduposition-wrap">
+                  <div>
+                    <div class="div-block-129"><img src="images/Artboard_1.png" loading="lazy" alt="WrkLogo" width="70"></div>
+                  </div>
+                  <div class="paragraph-light cc-position-name">Software Engineer<br><span class="text-span-4">Python DevOp Engineer</span></div>
+                  <div class="div-block-2">
+                    <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2019 — Present <br></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+          <div data-w-id="5c0058e9-850b-24e2-2e59-90c994fba77c" style="opacity:0" class="container">
+            <div class="carrer-headline-wrap">
+              <h2 class="heading-2">Education Background</h2>
+              <p class="paragraph-light">Graduated with a Master of Science in Computer Info. Science (with a concentration in Cybersecurity) from Harrisburg University of Science and Technology (USA) and a Bachelor of Science in Physics from the University of Lagos (Nigeria).</p>
+            </div>
+            <div class="w-layout-grid work-experience-grid">
+              <div id="w-node-_5c0058e9-850b-24e2-2e59-90c994fba783-3fff4113" class="work-eduposition-wrap">
+                <div class="div-block"><img src="images/10.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 1279px) 95px, (max-width: 1439px) 7vw, 95px" width="95" alt="schlLogo" srcset="images/10-p-500.png 500w, images/10.png 600w"></div>
+                <div class="paragraph-light cc-position-name"><span class="text-span-2">Harrisburg University of Sci &amp; Tech.<br></span><span class="text-span-3">Masters of Science</span></div>
+                <div class="paragraph-tiny cc-paragraph-tiny-light">Computer Science with conc. in Cybersecurity<br></div>
+              </div>
+              <div id="w-node-_5c0058e9-850b-24e2-2e59-90c994fba78f-3fff4113" class="work-eduposition-wrap">
+                <div class="div-block"><img src="images/university-of-lagos-logo-38976CB5C4-seeklogo.com.png" loading="lazy" alt="SchlIcon" width="95"></div>
+                <div class="paragraph-light cc-position-name"><span class="text-span-2">University of Lagos.<br></span><span class="text-span-3">Bachelors of Science</span></div>
+                <div class="paragraph-tiny cc-paragraph-tiny-light">Physics<br></div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </section>
-    <section id="about" class="section-3">
-      <div data-w-id="dff26f68-5731-3efa-d3dd-8f65c72d8fc2" style="opacity:0" class="container">
-        <div class="div-block-17">
-          <div class="carrer-headline-wrap">
-            <h2 class="heading-2">Professional Experience</h2>
-            <p class="paragraph-light">Experienced data scientist with a strong foundation in leveraging different tech stack in developing robust application. </p>
-          </div>
-          <a href="resume.html" class="div-block-16 w-inline-block">
-            <div>View Resume </div>
-            <div class="html-embed-4 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-up-right-circle" viewbox="0 0 16 16">
-                <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.854 10.803a.5.5 0 1 1-.708-.707L9.243 6H6.475a.5.5 0 1 1 0-1h3.975a.5.5 0 0 1 .5.5v3.975a.5.5 0 1 1-1 0V6.707l-4.096 4.096z"></path>
-              </svg></div>
-          </a>
-        </div>
-        <div class="w-layout-grid work-experience-grid">
-          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fc9-3fff4113" class="work-eduposition-wrap">
-            <div class="div-block-132"><img src="images/Vector-Zercom-Logo.png" loading="lazy" width="125" id="w-node-_858baa71-2f64-b04b-7c82-88a7c54f9646-3fff4113" alt="WrkLogo"></div>
-            <div class="paragraph-light cc-position-name">Software Developement Engineer</div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">Oct 2016— Nov 2018<br></div>
-          </div>
-          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd1-3fff4113" class="work-eduposition-wrap">
-            <div class="div-block-130"><img src="images/Lidya_logo.png" loading="lazy" width="95" sizes="(max-width: 479px) 100vw, (max-width: 1279px) 95px, (max-width: 1439px) 7vw, 95px" alt="WrkLogo" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w"></div>
-            <div class="paragraph-light cc-position-name">Data Analytical Engineer</div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2018 — Apr 2019<br></div>
-          </div>
-          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fd9-3fff4113" class="work-eduposition-wrap">
-            <div class="div-block-131"><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="135" alt="SchlIcon"></div>
-            <div class="paragraph-light cc-position-name">Graduate Student Assistant </div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">May 2019— Nov 2019<br></div>
-          </div>
-          <div id="w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fe1-3fff4113" class="work-eduposition-wrap">
-            <div>
-              <div class="div-block-129"><img src="images/Artboard_1.png" loading="lazy" alt="WrkLogo" width="70"></div>
-            </div>
-            <div class="paragraph-light cc-position-name">Software Engineer<br><span class="text-span-4">Python DevOp Engineer</span></div>
-            <div class="div-block-2">
-              <div class="paragraph-tiny cc-paragraph-tiny-light">Nov 2019 — Present <br></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <div data-w-id="bf7eff07-8f15-6379-ef31-97e9b604d463" style="opacity:0" class="container">
-      <div class="carrer-headline-wrap">
-        <h2 class="heading-2">Education Background</h2>
-        <p class="paragraph-light">Graduated with a Master of Science in Computer Info. Science (with a concentration in Cybersecurity) from Harrisburg University of Science and Technology (USA) and a Bachelor of Science in Physics from the University of Lagos (Nigeria).</p>
-      </div>
-      <div class="w-layout-grid work-experience-grid">
-        <div id="w-node-bf7eff07-8f15-6379-ef31-97e9b604d474-3fff4113" class="work-eduposition-wrap">
-          <div class="div-block"><img src="images/10.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 1279px) 95px, (max-width: 1439px) 7vw, 95px" width="95" alt="schlLogo" srcset="images/10-p-500.png 500w, images/10.png 600w"></div>
-          <div class="paragraph-light cc-position-name"><span class="text-span-2">Harrisburg University of Sci &amp; Tech.<br></span><span class="text-span-3">Masters of Science</span></div>
-          <div class="paragraph-tiny cc-paragraph-tiny-light">Computer Science with conc. in Cybersecurity<br></div>
-        </div>
-        <div id="w-node-f043acba-e121-e5a0-81a0-e93bae00dcdd-3fff4113" class="work-eduposition-wrap">
-          <div class="div-block"><img src="images/university-of-lagos-logo-38976CB5C4-seeklogo.com.png" loading="lazy" alt="SchlIcon" width="95"></div>
-          <div class="paragraph-light cc-position-name"><span class="text-span-2">University of Lagos.<br></span><span class="text-span-3">Bachelors of Science</span></div>
-          <div class="paragraph-tiny cc-paragraph-tiny-light">Physics<br></div>
-        </div>
-      </div>
-    </div>
   </div>
   <section id="contact_me" data-w-id="d783a17e-0b35-a13a-0448-a852d0df4a24" class="section cc-contact">
     <div class="container">
@@ -926,7 +919,7 @@ height: 0.625rem;
             </g></g></g></g></g></g></svg>
           </div>
         </a>
-        <a href="https://dribbble.com/Scarphase" class="w-inline-block">
+        <a href="https://dribbble.com/Scarphase" class="link-block-8 w-inline-block">
           <div class="html-embed-3 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-dribbble" viewbox="0 0 16 16">
               <path fill-rule="evenodd" d="M8 0C3.584 0 0 3.584 0 8s3.584 8 8 8c4.408 0 8-3.584 8-8s-3.592-8-8-8zm5.284 3.688a6.802 6.802 0 0 1 1.545 4.251c-.226-.043-2.482-.503-4.755-.217-.052-.112-.096-.234-.148-.355-.139-.33-.295-.668-.451-.99 2.516-1.023 3.662-2.498 3.81-2.69zM8 1.18c1.735 0 3.323.65 4.53 1.718-.122.174-1.155 1.553-3.584 2.464-1.12-2.056-2.36-3.74-2.551-4A6.95 6.95 0 0 1 8 1.18zm-2.907.642A43.123 43.123 0 0 1 7.627 5.77c-3.193.85-6.013.833-6.317.833a6.865 6.865 0 0 1 3.783-4.78zM1.163 8.01V7.8c.295.01 3.61.053 7.02-.971.199.381.381.772.555 1.162l-.27.078c-3.522 1.137-5.396 4.243-5.553 4.504a6.817 6.817 0 0 1-1.752-4.564zM8 14.837a6.785 6.785 0 0 1-4.19-1.44c.12-.252 1.509-2.924 5.361-4.269.018-.009.026-.009.044-.017a28.246 28.246 0 0 1 1.457 5.18A6.722 6.722 0 0 1 8 14.837zm3.81-1.171c-.07-.417-.435-2.412-1.328-4.868 2.143-.338 4.017.217 4.251.295a6.774 6.774 0 0 1-2.924 4.573z"></path>
             </svg></div>
@@ -1801,6 +1794,18 @@ height: 0.625rem;
         </div>
       </div>
     </div>
+  </div>
+  <div class="w-embed w-script">
+    <script>
+	document.addEventListener( 'click', function (e) {
+  circle1
+    .tune({ x: e.pageX, y: e.pageY  })
+    .replay();
+  circle2
+    .tune({ x: e.pageX, y: e.pageY  })
+    .replay();
+});
+</script>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=641b5e72069a0f21c5ff410f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
