--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Mar 02 2024 00:43:38 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Mar 02 2024 17:57:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4f98ff4116" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -279,7 +279,7 @@
                 </g></g></g></g></g></g></svg>
               </div>
             </a>
-            <a href="https://dribbble.com/Scarphase" class="w-inline-block">
+            <a href="https://dribbble.com/Scarphase" class="link-block-9 w-inline-block">
               <div class="html-embed-3 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-dribbble" viewbox="0 0 16 16">
                   <path fill-rule="evenodd" d="M8 0C3.584 0 0 3.584 0 8s3.584 8 8 8c4.408 0 8-3.584 8-8s-3.592-8-8-8zm5.284 3.688a6.802 6.802 0 0 1 1.545 4.251c-.226-.043-2.482-.503-4.755-.217-.052-.112-.096-.234-.148-.355-.139-.33-.295-.668-.451-.99 2.516-1.023 3.662-2.498 3.81-2.69zM8 1.18c1.735 0 3.323.65 4.53 1.718-.122.174-1.155 1.553-3.584 2.464-1.12-2.056-2.36-3.74-2.551-4A6.95 6.95 0 0 1 8 1.18zm-2.907.642A43.123 43.123 0 0 1 7.627 5.77c-3.193.85-6.013.833-6.317.833a6.865 6.865 0 0 1 3.783-4.78zM1.163 8.01V7.8c.295.01 3.61.053 7.02-.971.199.381.381.772.555 1.162l-.27.078c-3.522 1.137-5.396 4.243-5.553 4.504a6.817 6.817 0 0 1-1.752-4.564zM8 14.837a6.785 6.785 0 0 1-4.19-1.44c.12-.252 1.509-2.924 5.361-4.269.018-.009.026-.009.044-.017a28.246 28.246 0 0 1 1.457 5.18A6.722 6.722 0 0 1 8 14.837zm3.81-1.171c-.07-.417-.435-2.412-1.328-4.868 2.143-.338 4.017.217 4.251.295a6.774 6.774 0 0 1-2.924 4.573z"></path>
                 </svg></div>
@@ -299,9 +299,190 @@
           </div>
           <div class="skill_logo">
             <div class="text-block-3-copy">Skills Highlight</div>
-            <div class="brix---section-small-4">
-              <div class="brix---container-default-15 w-container">
-                <div data-w-id="b7d2e886-9799-183d-79ff-838210953c15" style="-webkit-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 10%, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-layout-grid brix---grid-6-columns-logo-strip-2"><img src="images/python-logo-master-v3-TM-flattened.png" alt="SkillImg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 36vw, (max-width: 991px) 188px, 115.328125px" srcset="images/python-logo-master-v3-TM-flattened-p-500.png 500w, images/python-logo-master-v3-TM-flattened.png 601w"><img src="images/Snowflake-Emblem.png" srcset="images/Snowflake-Emblem-p-500.png 500w, images/Snowflake-Emblem-p-800.png 800w, images/Snowflake-Emblem-p-1080.png 1080w, images/Snowflake-Emblem-p-1600.png 1600w, images/Snowflake-Emblem-p-2000.png 2000w, images/Snowflake-Emblem.png 3840w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 26vw, (max-width: 991px) 130px, 115.3359375px" width="130" alt="SkillImg"><img src="images/mp504x498mattef8f8f8t-pad600x600f8f8f8.jpg" srcset="images/mp504x498mattef8f8f8t-pad600x600f8f8f8-p-500.jpg 500w, images/mp504x498mattef8f8f8t-pad600x600f8f8f8.jpg 600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 15vw, 75px" width="75" alt="SkillImg"><img src="images/image2-1.png.webp" srcset="images/image2-1.png-p-500.webp 500w, images/image2-1.png.webp 600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 30vw, (max-width: 991px) 150px, 115.328125px" width="150" alt="SkillImg"><img src="images/Power-BI-Symbol.png" alt="SkillImg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 36vw, (max-width: 991px) 188px, 115.3359375px" srcset="images/Power-BI-Symbol-p-500.png 500w, images/Power-BI-Symbol-p-800.png 800w, images/Power-BI-Symbol-p-1080.png 1080w, images/Power-BI-Symbol-p-1600.png 1600w, images/Power-BI-Symbol.png 3840w"><img src="images/Microsoft_Azure_Logo.svg.png" alt="SkillImg" sizes="(max-width: 479px) 100vw, (max-width: 767px) 36vw, (max-width: 991px) 188px, 115.3359375px" srcset="images/Microsoft_Azure_Logo.svg-p-500.png 500w, images/Microsoft_Azure_Logo.svg-p-800.png 800w, images/Microsoft_Azure_Logo.svg-p-1080.png 1080w, images/Microsoft_Azure_Logo.svg-p-1600.png 1600w, images/Microsoft_Azure_Logo.svg-p-2000.png 2000w, images/Microsoft_Azure_Logo.svg.png 2560w"><img src="images/HTML5_logo_and_wordmark.svg.png" srcset="images/HTML5_logo_and_wordmark.svg-p-500.png 500w, images/HTML5_logo_and_wordmark.svg.png 800w" width="80" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16vw, (max-width: 1279px) 80px, (max-width: 1439px) 6vw, 80px" alt="SkillImg"><img src="images/python-django.png.webp" alt="SkillImg" srcset="images/python-django.png-p-500.webp 500w, images/python-django.png-p-800.webp 800w, images/python-django.png-p-1080.webp 1080w, images/python-django.png-p-1600.webp 1600w, images/python-django.png-p-2000.webp 2000w, images/python-django.png.webp 2400w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 36vw, (max-width: 991px) 188px, 115.3359375px"><img src="images/Adobe-logo.png" srcset="images/Adobe-logo-p-500.png 500w, images/Adobe-logo-p-800.png 800w, images/Adobe-logo-p-1080.png 1080w, images/Adobe-logo.png 3840w" width="150" sizes="(max-width: 479px) 100vw, (max-width: 767px) 144px, (max-width: 991px) 150px, 115.3359375px" alt="SkillImg"><img src="images/JavaScript-logo.png" srcset="images/JavaScript-logo-p-500.png 500w, images/JavaScript-logo.png 1052w" width="70" sizes="(max-width: 479px) 100vw, (max-width: 767px) 67.20001220703125px, (max-width: 1279px) 70px, (max-width: 1439px) 5vw, 70px" alt="SkillImg"><img src="images/nginx-default_featured-2020.png" width="120" alt="SkillImg"><img src="images/Git-logo.svg.png" srcset="images/Git-logo.svg-p-500.png 500w, images/Git-logo.svg-p-800.png 800w, images/Git-logo.svg-p-1080.png 1080w, images/Git-logo.svg.png 1280w" width="80" sizes="(max-width: 479px) 100vw, (max-width: 767px) 76.79998779296875px, (max-width: 1279px) 80px, (max-width: 1439px) 6vw, 80px" alt="SkillImg"><img src="images/Apache_Spark_logo.svg.png" srcset="images/Apache_Spark_logo.svg-p-500.png 500w, images/Apache_Spark_logo.svg-p-800.png 800w, images/Apache_Spark_logo.svg-p-1080.png 1080w, images/Apache_Spark_logo.svg.png 1280w" width="80" sizes="(max-width: 479px) 100vw, (max-width: 767px) 16vw, (max-width: 1279px) 80px, (max-width: 1439px) 6vw, 80px" alt="SkillLogo"><img src="images/linux.png" alt="SkillLogo" width="80"></div>
+            <div class="div-block-134">
+              <div id="w-node-ec27224c-a2ff-ddbc-a3bd-ac78a1280576-98ff4116" class="div-block-138"><img src="images/image-2.webp" loading="lazy" alt="" class="image-8">
+                <div class="div-block-135">
+                  <a href="#" class="link underline-fill w-inline-block">
+                    <div class="text-block-15">Cloud Computing</div>
+                    <div class="custom-styles w-embed">
+                      <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                    </div>
+                  </a>
+                  <div class="paragraph-light cc-position-name">Google GCP, AWS</div>
+                </div>
+              </div>
+              <div id="w-node-ec27224c-a2ff-ddbc-a3bd-ac78a128057f-98ff4116" class="div-block-141"><img src="images/image-3.webp" loading="lazy" alt="" class="image-7">
+                <div class="div-block-135">
+                  <a href="#" class="link underline-fill w-inline-block">
+                    <div class="text-block-15">Websites</div>
+                    <div class="custom-styles w-embed">
+                      <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                    </div>
+                  </a>
+                  <div class="paragraph-light cc-position-name">Modern, Responsive</div>
+                </div>
+              </div>
+              <div id="w-node-ec27224c-a2ff-ddbc-a3bd-ac78a1280588-98ff4116" class="div-block-139"><img src="images/image.webp" loading="lazy" alt="" class="image-9">
+                <div class="div-block-135">
+                  <a href="#" class="link underline-fill w-inline-block">
+                    <div class="text-block-15">API Integrations</div>
+                    <div class="custom-styles w-embed">
+                      <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                    </div>
+                  </a>
+                  <div class="paragraph-light cc-position-name">Machine Learning, OpenAI</div>
+                </div>
+              </div>
+              <div id="w-node-ec27224c-a2ff-ddbc-a3bd-ac78a1280591-98ff4116" class="div-block-140"><img src="images/image-4.webp" loading="lazy" alt="" class="image-10">
+                <div class="div-block-135">
+                  <a href="#" class="link underline-fill w-inline-block">
+                    <div class="text-block-15">UX Research</div>
+                    <div class="custom-styles w-embed">
+                      <style>
+.underline-fill::before {
+  height: 100%;
+  top: 0;
+  opacity: 0;
+}
+.underline-fill:hover::before {
+  opacity: 1;
+  animation: coverUp 0.3s ease forwards;
+}
+@keyframes coverUp {
+  0% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 0.045, 1);
+  }
+  50% {
+      transform-origin: 50% 100%;
+      transform: scale3d(1, 1, 1);
+  }
+  51% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 1, 1);
+  }
+  100% {
+      transform-origin: 50% 0%;
+      transform: scale3d(1, 0.045, 1);
+  }
+}
+.underline-fill::after {
+  content: '';
+  transition: opacity 0.3s;
+}
+.underline-fill:hover::after {
+  opacity: 0;
+}
+</style>
+                    </div>
+                  </a>
+                  <div class="paragraph-light cc-position-name"><strong>Market, User</strong></div>
+                </div>
               </div>
             </div>
           </div>
@@ -474,7 +655,7 @@
         <div class="w-layout-grid uui-layout32_component">
           <div class="uui-layout32_content-left">
             <div><img src="images/Lidya_logo.png" loading="lazy" width="90" sizes="90px" alt="WrkLogo" srcset="images/Lidya_logo-p-500.png 500w, images/Lidya_logo.png 501w"></div>
-            <div class="uui-heading-subheading-12">Data Analyst <br><span class="text-span-6"><em>Sept 2018–Apr 2019<br></em><strong><em class="italic-text-2">Lagos, Nigeria</em></strong></span></div>
+            <div class="uui-heading-subheading-12">Data Analystical Engineer <br><span class="text-span-6"><em>Sept 2018–Apr 2019<br></em><strong><em class="italic-text-2">Lagos, Nigeria</em></strong></span></div>
             <div class="uui-space-medium-7"></div>
           </div>
           <div class="uui-layout32_content-right">
@@ -580,7 +761,7 @@
         <div class="w-layout-grid uui-layout32_component">
           <div class="uui-layout32_content-left">
             <div><img src="images/Vector-Zercom-Logo.png" loading="lazy" width="130" alt="WrkLogo"></div>
-            <div class="uui-heading-subheading-12">Junior Software Engineer</div>
+            <div class="uui-heading-subheading-12">Software Engineer</div>
             <div class="uui-heading-subheading-12"><span class="text-span-10">Web &amp; Interactive E-Learning Developer<br></span><span class="text-span-6"><em>Oct 2016–Nov 2018<br></em><strong><em class="italic-text-2">Victoria Island, Lagos (Nigeria)</em></strong></span></div>
             <div class="uui-space-medium-7"></div>
           </div>
@@ -837,7 +1018,7 @@
             </g></g></g></g></g></g></svg>
           </div>
         </a>
-        <a href="https://dribbble.com/Scarphase" class="w-inline-block">
+        <a href="https://dribbble.com/Scarphase" class="link-block-8 w-inline-block">
           <div class="html-embed-3 w-embed"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-dribbble" viewbox="0 0 16 16">
               <path fill-rule="evenodd" d="M8 0C3.584 0 0 3.584 0 8s3.584 8 8 8c4.408 0 8-3.584 8-8s-3.592-8-8-8zm5.284 3.688a6.802 6.802 0 0 1 1.545 4.251c-.226-.043-2.482-.503-4.755-.217-.052-.112-.096-.234-.148-.355-.139-.33-.295-.668-.451-.99 2.516-1.023 3.662-2.498 3.81-2.69zM8 1.18c1.735 0 3.323.65 4.53 1.718-.122.174-1.155 1.553-3.584 2.464-1.12-2.056-2.36-3.74-2.551-4A6.95 6.95 0 0 1 8 1.18zm-2.907.642A43.123 43.123 0 0 1 7.627 5.77c-3.193.85-6.013.833-6.317.833a6.865 6.865 0 0 1 3.783-4.78zM1.163 8.01V7.8c.295.01 3.61.053 7.02-.971.199.381.381.772.555 1.162l-.27.078c-3.522 1.137-5.396 4.243-5.553 4.504a6.817 6.817 0 0 1-1.752-4.564zM8 14.837a6.785 6.785 0 0 1-4.19-1.44c.12-.252 1.509-2.924 5.361-4.269.018-.009.026-.009.044-.017a28.246 28.246 0 0 1 1.457 5.18A6.722 6.722 0 0 1 8 14.837zm3.81-1.171c-.07-.417-.435-2.412-1.328-4.868 2.143-.338 4.017.217 4.251.295a6.774 6.774 0 0 1-2.924 4.573z"></path>
             </svg></div>
