--- a/work/software-engineering.html
+++ b/work/software-engineering.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Mar 02 2024 17:57:41 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Mar 02 2024 18:32:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65e14ad4f7f059d1a85fa108" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -264,7 +264,7 @@
 " class="uui-team10_image-2"></div>
                 <div class="div-block-126">
                   <div class="uui-heading-tiny-9">
-                    <a data-w-id="75082d6e-de07-78b0-8dc0-49b6bf07a4f8" href="../work/project-1.html" class="uui-blogsection12_title-link w-inline-block">
+                    <a data-w-id="75082d6e-de07-78b0-8dc0-49b6bf07a4f8" href="#" class="uui-blogsection12_title-link w-inline-block">
                       <h3 class="uui-heading-xsmall-12">Africa Data Foundation</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
