--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Sat Mar 02 2024 17:57:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio - Webflow HTML website template</title>
-  <meta content="Portfolio - Webflow HTML website template" property="og:title">
+  <title> Ayo's Portfolio </title>
+  <meta content="Ayo's Portfolio" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="twitter:image">
